--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,9 @@ version: 2
 jobs:
   build:
     docker:
-      - image: cimg/go:1.16
+      - image: cimg/go:1.18
     steps:
       - checkout
-      - run: make citest
+      - run: go install honnef.co/go/tools/cmd/staticcheck@2022.1.2
+      - run: go install github.com/securego/gosec/v2/cmd/gosec@v2.12.0
+      - run: make static-checks citest
