--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,5 @@ jobs:
       - image: cimg/go:1.18
     steps:
       - checkout
-      - run: go install honnef.co/go/tools/cmd/staticcheck@2022.1.2
-      - run: go install github.com/securego/gosec/v2/cmd/gosec@v2.12.0
+      - run: wget -O- -nv https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s v1.46.2
       - run: make static-checks citest
