--- a/.github/workflows/elps.yml
+++ b/.github/workflows/elps.yml
@@ -7,8 +7,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: golang:1.18
+      image: golang:1.20
     steps:
     - uses: actions/checkout@v3.5.0
-    - run: wget -O- -nv https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s v1.46.2
+    - name: Install golangci-lint
+      run: wget -O- -nv https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s "v${GOLANGCI_LINT_VERSION}"
+      env:
+        GOLANGCI_LINT_VERSION: 1.52.2
+        BINDIR: /usr/local/bin
     - run: make static-checks citest
